--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
@@ -11,7 +11,11 @@
 / {
 	memory@c0000000 {
 		device_type = "memory";
-		reg = <0xC0000000 0x10000000>;
+		reg = <0xC0000000 0x20000000>;
+	};
+
+	aliases {
+		serial8 = &uart8;
 	};
 
 	vin: vin {
@@ -41,7 +45,7 @@
         regulator-always-on;
     };
 
-	v3v3: regulator-v3v3 {
+	v3v3: regulator-3p3v {
         compatible = "regulator-fixed";
         regulator-name = "v3v3";
         regulator-min-microvolt = <3300000>;
@@ -55,42 +59,6 @@
         regulator-name = "vdd_usb";
         regulator-min-microvolt = <3300000>;
         regulator-max-microvolt = <3300000>;
-        regulator-off-in-suspend;
-        regulator-always-on;
-    };
-
-	vdd_ddr: regulator-vdd-ddr {
-        compatible = "regulator-fixed";
-        regulator-name = "vdd_ddr";
-        regulator-min-microvolt = <1350000>;
-        regulator-max-microvolt = <1350000>;
-        regulator-off-in-suspend;
-        regulator-always-on;
-    };
-
-	vdda: regulator-vdda {
-        compatible = "regulator-fixed";
-        regulator-name = "vdda";
-        regulator-min-microvolt = <2900000>;
-        regulator-max-microvolt = <2900000>;
-        regulator-off-in-suspend;
-        regulator-always-on;
-    };
-
-	vtt_ddr: regulator-vtt-ddr {
-        compatible = "regulator-fixed";
-        regulator-name = "vtt_ddr";
-        regulator-min-microvolt = <500000>;
-        regulator-max-microvolt = <750000>;
-        regulator-off-in-suspend;
-        regulator-always-on;
-    };
-
-	v2v8: regulator-v2v8 {
-        compatible = "regulator-fixed";
-        regulator-name = "v2v8";
-        regulator-min-microvolt = <2800000>;
-        regulator-max-microvolt = <2800000>;
         regulator-off-in-suspend;
         regulator-always-on;
     };
@@ -129,8 +97,8 @@
 	system_suspend_supported_soc_modes = <
 		STM32_PM_CSLEEP_RUN
 		STM32_PM_CSTOP_ALLOW_LP_STOP
-		STM32_PM_CSTOP_ALLOW_LPLV_STOP
-		STM32_PM_CSTOP_ALLOW_STANDBY_DDR_SR
+		// STM32_PM_CSTOP_ALLOW_LPLV_STOP
+		// STM32_PM_CSTOP_ALLOW_STANDBY_DDR_SR
 	>;
 	system_off_soc_mode = <STM32_PM_CSTOP_ALLOW_STANDBY_DDR_OFF>;
 	vdd-supply = <&vdd>;
