更新astro设备树

--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dts
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dts
@@ -16,8 +16,12 @@
 	model = "STMicroelectronics STM32MP157C-ASTRO board";
 	compatible = "st,stm32mp157c-astro", "st,stm32mp157";
 
+	aliases {
+		serial0 = &uart8;
+	};
+
 	chosen {
-		stdout-path = "serial8:115200n8";
+		stdout-path = "serial0:115200n8";
 	};
 };
 
