--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro-fw-config.dts
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro-fw-config.dts
@@ -8,5 +8,5 @@
  * https://wiki.st.com/stm32mpu/wiki/Category:Device_tree_configuration
  */
 
-#define DDR_SIZE	0x20000000 /* 256MB */
+#define DDR_SIZE	0x20000000 /* 256Mb * 16bit = 512MB */
 #include "stm32mp15-fw-config.dtsi"
