创建openedv设备树

--- a/Makefile.sdk
+++ b/Makefile.sdk
@@ -28,13 +28,13 @@ TF_A_BINARY_optee ?= tf-a
 TF_A_MAKE_TARGET_optee ?= dtbs
 
 # Init default config settings
-TF_A_DEVICETREE_trusted ?= stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro
+TF_A_DEVICETREE_trusted ?= stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro stm32mp157d-openedv
 TF_A_EXTRA_OPTFLAGS_trusted ?= AARCH32_SP=sp_min
 TF_A_BINARY_trusted ?= tf-a
 TF_A_MAKE_TARGET_trusted ?= bl32 dtbs
 
 # Init default config settings
-TF_A_DEVICETREE_emmc ?=  stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro
+TF_A_DEVICETREE_emmc ?=  stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro stm32mp157d-openedv
 TF_A_EXTRA_OPTFLAGS_emmc ?= STM32MP_EMMC=1 PSA_FWU_SUPPORT=1
 TF_A_BINARY_emmc ?= tf-a
 TF_A_MAKE_TARGET_emmc ?= all
@@ -52,19 +52,19 @@ TF_A_BINARY_nor ?= tf-a
 TF_A_MAKE_TARGET_nor ?= all
 
 # Init default config settings
-TF_A_DEVICETREE_sdcard ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro
+TF_A_DEVICETREE_sdcard ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro stm32mp157d-openedv
 TF_A_EXTRA_OPTFLAGS_sdcard ?= STM32MP_SDMMC=1 PSA_FWU_SUPPORT=1
 TF_A_BINARY_sdcard ?= tf-a
 TF_A_MAKE_TARGET_sdcard ?= all
 
 # Init default config settings
-TF_A_DEVICETREE_uart ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro
+TF_A_DEVICETREE_uart ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro stm32mp157d-openedv
 TF_A_EXTRA_OPTFLAGS_uart ?= STM32MP_UART_PROGRAMMER=1
 TF_A_BINARY_uart ?= tf-a
 TF_A_MAKE_TARGET_uart ?= all
 
 # Init default config settings
-TF_A_DEVICETREE_usb ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro
+TF_A_DEVICETREE_usb ?=  stm32mp157a-dk1 stm32mp157d-dk1 stm32mp157c-dk2 stm32mp157f-dk2 stm32mp135f-dk stm32mp157c-ed1 stm32mp157f-ed1 stm32mp157a-ev1 stm32mp157c-ev1 stm32mp157d-ev1 stm32mp157f-ev1 stm32mp157c-astro stm32mp157d-openedv
 TF_A_EXTRA_OPTFLAGS_usb ?= STM32MP_USB_PROGRAMMER=1
 TF_A_BINARY_usb ?= tf-a
 TF_A_MAKE_TARGET_usb ?= all
