--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
@@ -218,33 +218,21 @@
 	status = "okay";
 };
 
-&usbotg_hs {
-	phys = <&usbphyc_port1 0>;
-	phy-names = "usb2-phy";
-	usb-role-switch;
-	status = "okay";
+&usbh_ehci {
+    phys = <&usbphyc_port0>;
+    status = "okay";
+};
+
+&usbphyc {
+    status = "okay";
 };
 
 &usbphyc_port0 {
-	phy-supply = <&vdd_usb>;
+    phy-supply = <&vdd_usb>;
+    st,phy-tuning = <&usb_phy_tuning>;
 };
 
 &usbphyc_port1 {
-	phy-supply = <&vdd_usb>;
-};
-
-
-&pinctrl {
-	uart8_pins_mx: uart8-mx-0 {
-		pins1 {
-			pinmux = <STM32_PINMUX('E', 1, AF8)>; /* UART8_TX */
-			bias-disable;
-			drive-push-pull;
-			slew-rate = <0>;
-		};
-		pins2 {
-			pinmux = <STM32_PINMUX('E', 0, AF8)>; /* UART8_RX */
-			bias-disable;
-		};
-	};
+    phy-supply = <&vdd_usb>;
+    st,phy-tuning = <&usb_phy_tuning>;
 };
