--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dts
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dts
@@ -25,8 +25,19 @@
 	};
 };
 
-&cryp1 {
-	status = "okay";
+&pinctrl {
+	uart8_pins_mx: uart8-mx-0 {
+		pins1 {
+			pinmux = <STM32_PINMUX('E', 1, AF8)>; /* UART8_TX */
+			bias-disable;
+			drive-push-pull;
+			slew-rate = <0>;
+		};
+		pins2 {
+			pinmux = <STM32_PINMUX('E', 0, AF8)>; /* UART8_RX */
+			bias-disable;
+		};
+	};
 };
 
 &etzpc {
