--- a/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
+++ b/tf-a-stm32mp-v2.6-stm32mp-r2/fdts/stm32mp157c-astro.dtsi
@@ -71,14 +71,6 @@
 	st,digbypass;
 };
 
-&cpu0{
-	cpu-supply = <&vddcore>;
-};
-
-&cpu1 {
-	cpu-supply = <&vddcore>;
-};
-
 &hash1 {
 	status = "okay";
 };
@@ -131,71 +123,60 @@
 		0 /*MCO2*/
 	>;
 
-	st,pkcs = <
-		CLK_CKPER_HSE
-		CLK_FMC_ACLK
-		CLK_QSPI_ACLK
-		CLK_ETH_DISABLED
+	st,pkcs = <c
+		CLK_CKPER_DISABLED
+		CLK_ETH_PLL3Q
 		CLK_SDMMC12_PLL4P
-		CLK_DSI_DSIPLL
 		CLK_STGEN_HSE
-		CLK_USBPHY_HSE
-		CLK_SPI2S1_PLL3Q
-		CLK_SPI2S23_PLL3Q
-		CLK_SPI45_HSI
-		CLK_SPI6_HSI
-		CLK_I2C46_HSI
-		CLK_SDMMC3_PLL4P
-		CLK_USBO_USBPHY
-		CLK_ADC_CKPER
-		CLK_CEC_LSE
-		CLK_I2C12_HSI
-		CLK_I2C35_HSI
-		CLK_UART1_HSI
-		CLK_UART24_HSI
-		CLK_UART35_HSI
-		CLK_UART6_HSI
-		CLK_UART78_HSI
-		CLK_SPDIF_PLL4P
-		CLK_FDCAN_PLL4R
-		CLK_SAI1_PLL3Q
-		CLK_SAI2_PLL3Q
-		CLK_SAI3_PLL3Q
-		CLK_SAI4_PLL3Q
-		CLK_RNG1_LSI
-		CLK_RNG2_LSI
-		CLK_LPTIM1_PCLK1
-		CLK_LPTIM23_PCLK3
-		CLK_LPTIM45_LSE
+		CLK_USBPHY_PLL4R
+		CLK_SPI2S1_PLL4P
+		CLK_SPI2S23_DISABLED
+		CLK_SPI45_DISABLED
+		CLK_SPI6_DISABLED
+		CLK_I2C46_DISABLED
+		CLK_SDMMC3_DISABLED
+		CLK_USBO_PLL4R
+		CLK_ADC_DISABLED
+		CLK_CEC_DISABLED
+		CLK_I2C12_DISABLED
+		CLK_I2C35_DISABLED
+		CLK_UART1_DISABLED
+		CLK_UART24_PLL4Q
+		CLK_UART35_PLL4Q
+		CLK_UART6_PLL4Q
+		CLK_UART78_PLL4Q
+		CLK_SPDIF_DISABLED
+		CLK_FDCAN_PLL4Q
+		CLK_SAI1_DISABLED
+		CLK_SAI2_DISABLED
+		CLK_SAI3_DISABLED
+		CLK_SAI4_DISABLED
+		CLK_RNG1_PLL4R
+		CLK_LPTIM1_DISABLED
+		CLK_LPTIM23_DISABLED
+		CLK_LPTIM45_DISABLED
 	>;
 
-	/* VCO = 1066.0 MHz => P = 266 (AXI), Q = 533 (GPU), R = 533 (DDR) */
 	pll2: st,pll@1 {
 		compatible = "st,stm32mp1-pll";
 		reg = <1>;
-		cfg = <2 65 1 0 0 PQR(1,1,1)>;
-		frac = <0x1400>;
+		cfg = < 2 65 1 1 0 PQR(1,0,1) >;
+		frac = < 0x1400 >;
 	};
-
-	/* VCO = 417.8 MHz => P = 209, Q = 24, R = 11 */
 	pll3: st,pll@2 {
 		compatible = "st,stm32mp1-pll";
 		reg = <2>;
-		cfg = <1 33 1 16 36 PQR(1,1,1)>;
-		frac = <0x1a04>;
+		cfg = < 2 49 1 3 1 PQR(1,1,0) >;
 	};
-
-	/* VCO = 594.0 MHz => P = 99, Q = 74, R = 74 */
 	pll4: st,pll@3 {
 		compatible = "st,stm32mp1-pll";
 		reg = <3>;
-		cfg = <3 98 5 7 7 PQR(1,1,1)>;
+		cfg = < 2 59 5 23 15 PQR(1,1,1) >;
 	};
 };
 
 &rng1 {
 	status = "okay";
-	secure-status = "okay";
 };
 
 &rtc {
@@ -218,21 +199,18 @@
 	status = "okay";
 };
 
-&usbh_ehci {
-    phys = <&usbphyc_port0>;
-    status = "okay";
+&usbotg_hs {
+	status = "okay";
 };
 
 &usbphyc {
-    status = "okay";
+	status = "okay";
 };
 
 &usbphyc_port0 {
-    phy-supply = <&vdd_usb>;
-    st,phy-tuning = <&usb_phy_tuning>;
+	status = "okay";
 };
 
 &usbphyc_port1 {
-    phy-supply = <&vdd_usb>;
-    st,phy-tuning = <&usb_phy_tuning>;
+	status = "okay";
 };
